# openclaw-wechat-plugin

./: .env.example  .gitignore  LICENSE  PUBLISH.md  README.md  main.py  pyproject.toml  requirements.txt
openclaw_wechat_plugin/: __init__.py  app.py  backend_client.py  cli.py  config.py  connector.py  models.py  openclaw_gateway.py  openclaw_installer.py  routes.py  wechat_crypto.py
openclaw_wechat_plugin/openclaw_extension/: index.ts  openclaw.plugin.json  package.json
