[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-wechat-plugin"
version = "0.3.0"
description = "Standalone WeChat adapter plugin for OpenClaw gateway"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "RolandXD" }
]
keywords = ["openclaw", "wechat", "plugin", "fastapi"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
]
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn>=0.35.0,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "httpx>=0.28.0,<1.0.0",
  "python-dotenv>=1.1.0,<2.0.0",
  "websockets>=12.0,<16.0",
]

[project.urls]
Homepage = "https://github.com/RolandXD/openclaw-wechat-plugin"
Repository = "https://github.com/RolandXD/openclaw-wechat-plugin"

[project.scripts]
openclaw-wechat-plugin = "openclaw_wechat_plugin.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["openclaw_wechat_plugin*"]

[tool.setuptools.package-data]
openclaw_wechat_plugin = [
  "openclaw_extension/package.json",
  "openclaw_extension/openclaw.plugin.json",
  "openclaw_extension/index.ts",
]
